assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: %empty
    7             | feature_list feature ';'

    8 feature: OBJECTID '(' ')' ':' TYPEID '{' expr '}'
    9        | OBJECTID '(' formal formal_list ')' ':' TYPEID '{' expr '}'
   10        | OBJECTID ':' TYPEID
   11        | OBJECTID ':' TYPEID ASSIGN expr

   12 formal_list: %empty
   13            | formal_list ',' formal

   14 formal: OBJECTID ':' TYPEID

   15 comma_expr_list: %empty
   16                | ',' expr comma_expr_list

   17 optional_argument_list: %empty
   18                       | expr comma_expr_list

   19 block_expr_list: expr ';'
   20                | expr ';' block_expr_list

   21 optional_assign_expr: %empty
   22                     | ASSIGN expr

   23 sub_let_expr: IN expr
   24             | ',' OBJECTID ':' TYPEID optional_assign_expr sub_let_expr

   25 case_list: case
   26          | case case_list

   27 case: OBJECTID ':' TYPEID DARROW expr ';'

   28 expr: OBJECTID ASSIGN expr
   29     | expr '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr '.' OBJECTID '(' optional_argument_list ')'
   31     | OBJECTID '(' optional_argument_list ')'
   32     | IF expr THEN expr ELSE expr FI
   33     | WHILE expr LOOP expr POOL
   34     | '{' block_expr_list '}'
   35     | LET OBJECTID ':' TYPEID optional_assign_expr sub_let_expr
   36     | CASE expr OF case_list ESAC
   37     | NEW TYPEID
   38     | ISVOID expr
   39     | expr '+' expr
   40     | expr '-' expr
   41     | expr '*' expr
   42     | expr '/' expr
   43     | '~' expr
   44     | expr '<' expr
   45     | expr LE expr
   46     | expr '=' expr
   47     | NOT expr
   48     | '(' expr ')'
   49     | OBJECTID
   50     | INT_CONST
   51     | STR_CONST
   52     | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 9 29 30 31 48
    ')' (41) 8 9 29 30 31 48
    '*' (42) 41
    '+' (43) 39
    ',' (44) 13 16 24
    '-' (45) 40
    '.' (46) 29 30
    '/' (47) 42
    ':' (58) 8 9 10 11 14 24 27 35
    ';' (59) 4 5 7 19 20 27
    '<' (60) 44
    '=' (61) 46
    '@' (64) 29
    '{' (123) 4 5 8 9 34
    '}' (125) 4 5 8 9 34
    '~' (126) 43
    error (256)
    CLASS (258) 4 5
    ELSE (259) 32
    FI (260) 32
    IF (261) 32
    IN (262) 23
    INHERITS (263) 5
    LET (264) 35
    LOOP (265) 33
    POOL (266) 33
    THEN (267) 32
    WHILE (268) 33
    CASE (269) 36
    ESAC (270) 36
    OF (271) 36
    DARROW (272) 27
    NEW (273) 37
    ISVOID (274) 38
    STR_CONST <symbol> (275) 51
    INT_CONST <symbol> (276) 50
    BOOL_CONST <boolean> (277) 52
    TYPEID <symbol> (278) 4 5 8 9 10 11 14 24 27 29 35 37
    OBJECTID <symbol> (279) 8 9 10 11 14 24 27 28 29 30 31 35 49
    ASSIGN (280) 11 22 28
    NOT (281) 47
    LE (282) 45
    ERROR (283)
    LET_IN (285)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <program> (47)
        on left: 1
        on right: 0
    class_list <classes> (48)
        on left: 2 3
        on right: 1 3
    class <class_> (49)
        on left: 4 5
        on right: 2 3
    feature_list <features> (50)
        on left: 6 7
        on right: 4 5 7
    feature <feature> (51)
        on left: 8 9 10 11
        on right: 7
    formal_list <formals> (52)
        on left: 12 13
        on right: 9 13
    formal <formal> (53)
        on left: 14
        on right: 9 13
    comma_expr_list <expressions> (54)
        on left: 15 16
        on right: 16 18
    optional_argument_list <expressions> (55)
        on left: 17 18
        on right: 29 30 31
    block_expr_list <expressions> (56)
        on left: 19 20
        on right: 20 34
    optional_assign_expr <expression> (57)
        on left: 21 22
        on right: 24 35
    sub_let_expr <expression> (58)
        on left: 23 24
        on right: 24 35
    case_list <cases> (59)
        on left: 25 26
        on right: 26 36
    case <case_> (60)
        on left: 27
        on right: 25 26
    expr <expression> (61)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 8 9 11 16 18 19 20 22 23 27 28 29 30 32 33 36 38 39 40 41 42 43 44 45 46 47 48


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 11


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 14

    feature  go to state 15


State 12

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 16


State 13

    8 feature: OBJECTID . '(' ')' ':' TYPEID '{' expr '}'
    9        | OBJECTID . '(' formal formal_list ')' ':' TYPEID '{' expr '}'
   10        | OBJECTID . ':' TYPEID
   11        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


State 14

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 19


State 15

    7 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 20


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 21

    feature  go to state 15


State 17

    8 feature: OBJECTID '(' . ')' ':' TYPEID '{' expr '}'
    9        | OBJECTID '(' . formal formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 22
    ')'       shift, and go to state 23

    formal  go to state 24


State 18

   10 feature: OBJECTID ':' . TYPEID
   11        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 25


State 19

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 20

    7 feature_list: feature_list feature ';' .

    $default  reduce using rule 7 (feature_list)


State 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 26


State 22

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 27


State 23

    8 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 28


State 24

    9 feature: OBJECTID '(' formal . formal_list ')' ':' TYPEID '{' expr '}'

    $default  reduce using rule 12 (formal_list)

    formal_list  go to state 29


State 25

   10 feature: OBJECTID ':' TYPEID .
   11        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 30

    $default  reduce using rule 10 (feature)


State 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 27

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 31


State 28

    8 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 32


State 29

    9 feature: OBJECTID '(' formal formal_list . ')' ':' TYPEID '{' expr '}'
   13 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 30

   11 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 49


State 31

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


State 32

    8 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 50


State 33

    9 feature: OBJECTID '(' formal formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 51


State 34

   13 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 22

    formal  go to state 52


State 35

   32 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 53


State 36

   35 expr: LET . OBJECTID ':' TYPEID optional_assign_expr sub_let_expr

    OBJECTID  shift, and go to state 54


State 37

   33 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 55


State 38

   36 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 56


State 39

   37 expr: NEW . TYPEID

    TYPEID  shift, and go to state 57


State 40

   38 expr: ISVOID . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 58


State 41

   51 expr: STR_CONST .

    $default  reduce using rule 51 (expr)


State 42

   50 expr: INT_CONST .

    $default  reduce using rule 50 (expr)


State 43

   52 expr: BOOL_CONST .

    $default  reduce using rule 52 (expr)


State 44

   28 expr: OBJECTID . ASSIGN expr
   31     | OBJECTID . '(' optional_argument_list ')'
   49     | OBJECTID .

    ASSIGN  shift, and go to state 59
    '('     shift, and go to state 60

    $default  reduce using rule 49 (expr)


State 45

   47 expr: NOT . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 61


State 46

   43 expr: '~' . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 62


State 47

   34 expr: '{' . block_expr_list '}'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    block_expr_list  go to state 63
    expr             go to state 64


State 48

   48 expr: '(' . expr ')'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 65


State 49

   11 feature: OBJECTID ':' TYPEID ASSIGN expr .
   29 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74

    $default  reduce using rule 11 (feature)


State 50

    8 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 75


State 51

    9 feature: OBJECTID '(' formal formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 76


State 52

   13 formal_list: formal_list ',' formal .

    $default  reduce using rule 13 (formal_list)


State 53

   29 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   32     | IF expr . THEN expr ELSE expr FI
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    THEN  shift, and go to state 77
    LE    shift, and go to state 66
    '<'   shift, and go to state 67
    '='   shift, and go to state 68
    '+'   shift, and go to state 69
    '-'   shift, and go to state 70
    '*'   shift, and go to state 71
    '/'   shift, and go to state 72
    '@'   shift, and go to state 73
    '.'   shift, and go to state 74


State 54

   35 expr: LET OBJECTID . ':' TYPEID optional_assign_expr sub_let_expr

    ':'  shift, and go to state 78


State 55

   29 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   33     | WHILE expr . LOOP expr POOL
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LOOP  shift, and go to state 79
    LE    shift, and go to state 66
    '<'   shift, and go to state 67
    '='   shift, and go to state 68
    '+'   shift, and go to state 69
    '-'   shift, and go to state 70
    '*'   shift, and go to state 71
    '/'   shift, and go to state 72
    '@'   shift, and go to state 73
    '.'   shift, and go to state 74


State 56

   29 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   36     | CASE expr . OF case_list ESAC
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    OF   shift, and go to state 80
    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74


State 57

   37 expr: NEW TYPEID .

    $default  reduce using rule 37 (expr)


State 58

   29 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   38     | ISVOID expr .
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    '@'  shift, and go to state 73
    '.'  shift, and go to state 74

    $default  reduce using rule 38 (expr)


State 59

   28 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 81


State 60

   31 expr: OBJECTID '(' . optional_argument_list ')'

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    $default  reduce using rule 17 (optional_argument_list)

    optional_argument_list  go to state 82
    expr                    go to state 83


State 61

   29 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr
   47     | NOT expr .

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74

    $default  reduce using rule 47 (expr)


State 62

   29 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   43     | '~' expr .
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    '@'  shift, and go to state 73
    '.'  shift, and go to state 74

    $default  reduce using rule 43 (expr)


State 63

   34 expr: '{' block_expr_list . '}'

    '}'  shift, and go to state 84


State 64

   19 block_expr_list: expr . ';'
   20                | expr . ';' block_expr_list
   29 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74
    ';'  shift, and go to state 85


State 65

   29 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr
   48     | '(' expr . ')'

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74
    ')'  shift, and go to state 86


State 66

   45 expr: expr LE . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 87


State 67

   44 expr: expr '<' . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 88


State 68

   46 expr: expr '=' . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 89


State 69

   39 expr: expr '+' . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 90


State 70

   40 expr: expr '-' . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 91


State 71

   41 expr: expr '*' . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 92


State 72

   42 expr: expr '/' . expr

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 93


State 73

   29 expr: expr '@' . TYPEID '.' OBJECTID '(' optional_argument_list ')'

    TYPEID  shift, and go to state 94


State 74

   30 expr: expr '.' . OBJECTID '(' optional_argument_list ')'

    OBJECTID  shift, and go to state 95


State 75

    8 feature: OBJECTID '(' ')' ':' TYPEID '{' expr . '}'
   29 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74
    '}'  shift, and go to state 96


State 76

    9 feature: OBJECTID '(' formal formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 97


State 77

   32 expr: IF expr THEN . expr ELSE expr FI

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 98


State 78

   35 expr: LET OBJECTID ':' . TYPEID optional_assign_expr sub_let_expr

    TYPEID  shift, and go to state 99


State 79

   33 expr: WHILE expr LOOP . expr POOL

    IF          shift, and go to state 35
    LET         shift, and go to state 36
    WHILE       shift, and go to state 37
    CASE        shift, and go to state 38
    NEW         shift, and go to state 39
    ISVOID      shift, and go to state 40
    STR_CONST   shift, and go to state 41
    INT_CONST   shift, and go to state 42
    BOOL_CONST  shift, and go to state 43
    OBJECTID    shift, and go to state 44
    NOT         shift, and go to state 45
    '~'         shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expr  go to state 100


State 80

   36 expr: CASE expr OF . case_list ESAC

    OBJECTID  shift, and go to state 101

    case_list  go to state 102
    case       go to state 103


State 81

   28 expr: OBJECTID ASSIGN expr .
   29     | expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74

    $default  reduce using rule 28 (expr)


State 82

   31 expr: OBJECTID '(' optional_argument_list . ')'

    ')'  shift, and go to state 104


State 83

   18 optional_argument_list: expr . comma_expr_list
   29 expr: expr . '@' TYPEID '.' OBJECTID '(' optional_argument_list ')'
   30     | expr . '.' OBJECTID '(' optional_argument_list ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74
    ','  shift, and go to state 105

    $default  reduce using rule 15 (comma_expr_list)

    comma_expr_list  go to state 106


State 84

   34 expr: '{' block_expr_list '}' .

    $default  reduce using rule 34 (expr)


State 85

   19 block_expr_list: expr ';' .
   20                | expr ';' . block_expr_list
